OPENMEETINGS-2577 Fix externalise constant name and no wildcard imports.